--- a/index.html
+++ b/index.html
@@ -26,48 +26,41 @@
         <div class=" header-content">
             <div class="container">
                 <div class="row d-flex  py-2 ">
-                    <div class="col d-flex px-0 ">
+                    <div class="col-6 d-flex px-0 ">
                         <img src="img/logo.png" class="logo-img" alt="icon_logo">
                         <a href="index.html">
-                            <h3 class="logo  text-uppercase pl-2 ">logo</h3>
+                            <h3 class="logo  text-uppercase pl-2 m-auto">logo</h3>
                         </a>
                     </div>
-                    <!-- <div class="col-auto ">
-                        <u>
-                            <li>функціонал</li>
-                            <li>пакети</li>
-                            <li>+11111111100</li>
-                            <li>hello@nlab.com</li>
-                        </u>
-
-                    </div> -->
-                    <div class="col-auto  pr-1 ">
-                        <a href="#">
-                            <h6 class=" text-uppercase menu ">функционал</h6>
-                        </a>
-                    </div>
-                    <div class="col-auto  pr-1 ">
-                        <a href="#">
-                            <h6 class=" text-uppercase menu ">пакеты</h6>
-                        </a>
-                    </div>
-                    <div class="col-auto d-flex pr-1 ">
-                        <i class="fas fa-phone-volume text-light menu"></i>
-                        <a href="#">
-                            <h6 class=" text-uppercase pl-1 menu ">+11111111100</h6>
-                        </a>
-                    </div>
-                    <div class="col-auto d-flex">
-                        <i class="far fa-envelope-open text-light menu"></i>
-                        <a href="#">
-                            <h6 class=" pl-1 menu">hello@nlab.com</h6>
-                        </a>
+                    <div class="col-6 pl-5 justify-content-center align-items-center d-flex">
+                        <div class="col-3  px-0 ">
+                            <a href="#">
+                                <h6 class=" text-uppercase menu text-center ">функционал</h6>
+                            </a>
+                        </div>
+                        <div class="col-3  px-0 ">
+                            <a href="#">
+                                <h6 class=" text-uppercase menu text-center">пакеты</h6>
+                            </a>
+                        </div>
+                        <div class="col-3 d-flex px-0 ">
+                            <i class="fas fa-phone-volume text-light menu"></i>
+                            <a href="#">
+                                <h6 class=" text-uppercase  menu text-center ">+11111111100</h6>
+                            </a>
+                        </div>
+                        <div class="col-3 d-flex">
+                            <i class="far fa-envelope-open text-light menu"></i>
+                            <a href="#">
+                                <h6 class=" pl-1 menu text-center">hello@nlab.com</h6>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <h5 class=" text-raise ">raise the next generation of leaders</h5>
                 <div class="row  pt-3 ">
                     <div class="col-6 d-flex justify-content-center px-0 ">
-                        <div class="">
+                        <div class="mr-2 mt-1">
                             <span class="circle-blue"></span>
                             <span class="header-dashed"></span>
                             <span class="circ-checkmark"><img src="img/checkmark.png" class="img-checkmark"
@@ -101,7 +94,7 @@
                     <div class="row justify-content-center block2-padding">
 
                         <div class="col-8 px-0">
-                            <h5 class="text-this-in">This is your 360 degree view</h5>
+                            <h5 class="universal-h5">This is your 360 degree view</h5>
                             <p class="text-networking ">Networking Lab provides the necessary tools for implementation
                                 of your strategy of
                                 development. <br> By using assessment of knowledge, educational modules, you will be
@@ -125,7 +118,7 @@
                     <div class="row justify-content-center block3-padding">
 
                         <div class="col-8">
-                            <h5 class="text-this-in text-light">Simple actions. Tipping point</h5>
+                            <h5 class="universal-h5 text-light">Simple actions. Tipping point</h5>
                             <p class="text-being">Being an expert, you realize that limitless possibilities provided by
                                 modern day
                                 technologies are available for you. <br>
@@ -140,10 +133,10 @@
                         <div class=" general-office">
                             <ul class="nav justify-content-center">
                                 <li class="nav-item border-office">
-                                    <a class="nav-link active text-this-in text-light" href="#">BACK OFFICE</a>
+                                    <a class="nav-link active universal-h5 text-light" href="#">BACK OFFICE</a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a class="nav-link text-this-in text-light" href="#">FRONT OFFICE</a>
+                                    <a class="nav-link universal-h5 text-light" href="#">FRONT OFFICE</a>
                                 </li>
                             </ul>
                             <hr class="mt-0">
@@ -215,7 +208,7 @@
 
             </div>
             <div class="container">
-                <h5 class="text-this-in text-left mt-3">attain more <br> using your skills</h5>
+                <h5 class="universal-h5 text-left mt-3">attain more <br> using your skills</h5>
                 <div class="row mt-4">
                     <div class="col-1">
                         <span class="elipse">#1</span>
@@ -278,22 +271,22 @@
             <div class="block5-content">
                 <div class="container">
                     <div class="row pt-5">
-                        <div class="col-6">
-                            <img src="img/people_block5.png" class=" people-block5" alt="">
+                        <div class="col-6 people-block5 ">
+                            <!-- <img src="img/people_block5.png" class=" people-block5" alt=""> -->
                         </div>
-                        <div class="col-6  pt-4">
+                        <div class="col-6  ">
                             <h6 class="mt-5 text-prior">Prior to full-scale testing of the platform which <br>
                                 involves your team members, you can check our <br>
                                 demo version and see how we arranged <br>
                                 everything (no registration is needed)<br>
                                 <span class="colortext">Welcome. The kettle is on the boil :)</span></h6>
-                            <button type="button" class="btn btn-primary px-3 mt-4">Take a look at the system</button>
+                            <button type="button" class="btn btn-primary px-3 mt-4 mb-5">Take a look at the
+                                system</button>
                         </div>
                     </div>
                     <div class="row mt-5 pb-4">
                         <div class="col-4">
-                            <div class=" box-shadow-block5 mx-auto"><img src="img/block5_1.png" class="picture-block5"
-                                    alt="block5_1"></div>
+                            <div class=" box-shadow-block5 mx-auto"><img src="img/block5_1.png" class="picture-block5" alt="block5_1"></div>
                             <div>
                                 <p class="text-block5 mt-4">New platform format oriented towards the problems <br>
                                     of the MLM companies which the latter had to solve <br>
@@ -342,7 +335,7 @@
             </div>
             <div class="block6-content">
                 <div class="container">
-                    <h5 class="text-this-in text-light pt-5">Global changes. Clear goals</h5>
+                    <h5 class="universal-h5 text-light pt-5 mb-4">Global changes. Clear goals</h5>
                     <div class="row mb-4">
                         <div class="col-4 ">
                             <div class="backgroud-block6">
@@ -401,11 +394,162 @@
                     </div>
                 </div>
             </div>
+            <div class="container">
+                <div class="row mt-5 mb-5">
+                    <div class="col-6">
+                        <h5 class="universal-h5 text-left">about company</h5>
+                        <p class="text-p2-block7">For more than 6 years we collaborated with the MLM companies and
+                            assisted them <br>
+                            in building up their teams by developing customized software. 12 companies <br>
+                            trusted us with finding solutions for their tasks, and our long-term and fruitful <br>
+                            cooperation bore fruit. </p>
+                        <p class="text-p2-block7">We looked at the industry from the inside, which enabled us to
+                            understand what <br>
+                            hinders the companies’ development, what they have to struggle against every day. <br>
+                            So we decided that it was high time to create something new, something that would <br>
+                            solve numerous problems weighing upon every player in this market. We hope it will <br>
+                            have a worldwide impact and transform the industry.
+                        </p>
+                    </div>
+                    <div class="col-6 pl-0 picture-block7 d-flex align-items-center">
+                        <p class="text-p-block7 ">MLM business may improve its <br>
+                            image, thus expanding the <br>
+                            market. It’s a mistake to <br>
+                            perceive it as it is done now <br> <br>
+                            <span class="epigraph ">— Максим Фамилия, должность</span>
+                        </p>
+                    </div>
+                </div>
+                <h6 class="company-values ">company values</h6>
+                <div class="row mt-4">
+                    <div class="col-3 d-flex px-0">
+                        <span>
+                            <img src="img/block7_1.png" class="icon-block7" alt="block7">
+                        </span>
+                        <div class="pl-2">
+                            <h6 class="h6-for-block7">Reputation </h6>
+                            <p class="text-p2-block7">We are keen to give the MLM <br>
+                                companies a possibility to <br>
+                                excel in what they do</p>
+                        </div>
+                    </div>
+                    <div class="col-3 d-flex px-0">
+                        <span>
+                            <img src="img/block7_2.png" class="icon-block7" alt="block7">
+                        </span>
+                        <div class="pl-2">
+                            <h6 class="h6-for-block7">Tipping point</h6>
+                            <p class="text-p2-block7">We seek to give the MLM <br>
+                                business, in the classic <br>
+                                principles of which we believe, <br>
+                                new tools that could change its <br>
+                                current image to the better and <br>
+                                to gain the market’s trust</p>
+                        </div>
+                    </div>
+                    <div class="col-3 d-flex px-0">
+                        <span>
+                            <img src="img/block7_3.png" class="icon-block7" alt="block7">
+                        </span>
+                        <div class="pl-2">
+                            <h6 class="h6-for-block7">Innovative approach <br> to applications </h6>
+                            <p class="text-p2-block7">The world of new applications <br>
+                                differs significantly from the old <br>
+                                approach to doing business. It <br>
+                                concerns efficiency of <br>
+                                operations and opening vistas. <br>
+                                We are following all new <br>
+                                technologies in order to be able <br>
+                                to present them to the MLM <br>
+                                companies at one venue</p>
+                        </div>
+                    </div>
+                    <div class="col-3 d-flex px-0">
+                        <span>
+                            <img src="img/block7_4.png" class="icon-block7" alt="block7">
+                        </span>
+                        <div class="pl-2">
+                            <h6 class="h6-for-block7">Relations with users </h6>
+                            <p class="text-p2-block7">To ensure the ultimate <br>
+                                usefulness of the product we <br>
+                                constantly check whether our <br>
+                                improvements really help our <br>
+                                customers. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-4 mb-4 justify-content-center">
+                    <div class="col-6 box-shadow-block7">
+                        <h6 class="our-mission mt-3 ">our mission</h6>
+                        <span class="line"></span>
+                        <p class="text-p2-block7 text-dark text-center">is to demonstrate the existing possibilities for
+                            implementation of the new <br>
+                            approach to doing business to all MLM companies, to help set up an out <br>
+                            standing team, achieve high goals, have impact on the industry. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="container">
+                    <h5 class="universal-h5 text-left">If you have <br> any more questions:</h5>
+                    <div class="row">
+                        <div class="col-4 picture-footer"></div>
+                        <div class="col-8">
+                            <form>
+                                <div class="form-group d-flex mb-4">
+                                    <input type="text" class="form-control mr-4 " id="exampleFormControlInput1"
+                                        placeholder="Your name">
+                                    <input type="email" class="form-control" id="exampleFormControlInput1"
+                                        placeholder="Your e-mail address">
+                                </div>
+                                <div class="form-group">
+                                    <textarea class="form-control" id="exampleFormControlTextarea1"
+                                        placeholder="Your question" rows="7"></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-primary px-3 mb-3">Send your message</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="contact">
+                <div class="container">
+                    <div class="row py-4">
+                        <div class="col-5 d-flex">
+                            <div class="col-4 d-flex align-items-center px-0 ">
+                                <img src="img/logo_footer.png" class="logo-img" alt="icon_logo">
+                                <a href="index.html">
+                                    <h3 class="logo  text-uppercase pl-2 text-light m-auto">logo</h3>
+                                </a>
+                            </div>
+                            <div class="col-4 d-flex align-items-center px-0">
+                                <i class="fas fa-phone-volume text-light menu"></i>
+                                <a href="#">
+                                    <h6 class=" text-uppercase pl-1 menu m-auto">+11111111100</h6>
+                                </a>
+                            </div>
+                            <div class="col-4 d-flex align-items-center px-0">
+                                <i class="far fa-envelope-open text-light menu"></i>
+                                <a href="#">
+                                    <h6 class=" pl-1 menu m-auto">hello@nlab.com</h6>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-7">
+                            <p class="text-contact">© 2007-2019, Networking Lab</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
 
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="//cdn.jsdelivr.net/jquery.shadow-animation/1/mainfile"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
+        <script src="js/refresh.js"></script>
 </body>
 
 </html>
